business-attributes: changes due to merge resolve conflicts