@@ -2,6 +2,7 @@ package com.linkedin.metadata;
 
 import com.linkedin.common.urn.Urn;
 import com.linkedin.common.urn.UrnUtils;
+import java.util.Arrays;
 import java.util.List;
 
 /** Static class containing commonly-used constants across DataHub services. */
@@ -387,7 +388,7 @@ public class Constants {
   public static final String BUSINESS_ATTRIBUTE_ASSOCIATION = "businessAttributeAssociation";
   public static final String BUSINESS_ATTRIBUTE_ASPECT = "businessAttributes";
   public static final List<String> SKIP_REFERENCE_ASPECT =
-      List.of("ownership", "status", "institutionalMemory");
+      Arrays.asList("ownership", "status", "institutionalMemory");
 
   // Posts
   public static final String POST_INFO_ASPECT_NAME = "postInfo";
